--- a/style.css
+++ b/style.css
@@ -138,6 +138,60 @@ font-size:1.5rem;
 font-weight: 400;
 color: #FFF;
 }
+.cards-second{
+  margin-top:10%;
+}
+.cards-second-picture{
+  display: flex;
+  gap:5%;
+}
+.cards-second-picture img{
+  width:20%;
+}
+.cards-second-picture h1{
+  color:#727272;
+  margin-top:5%;
+  margin-bottom:5%;
+
+}
+.cards-second-picture p{
+color: #727272;
+font-size:1.3rem;
+font-weight: 600;
+
+}
+.cards-second-picture div{
+  border:1px solid #FF900E;
+  padding:3% 5%;
+  text-align: center;
+}
+.cards-second-description{
+  margin-top:4%;
+  margin-bottom:4%;
+}
+.sponsors-picture{
+  display: flex;
+  justify-content: space-between;
+  
+
+}
+.sponsors-picture img{
+  width:10vw;
+}
+.sponsors-container{
+  margin-top:10%;
+}
+.sponsors-container p{
+  margin-top:3%;
+  margin-bottom:7%;
+}
+.sponsors-text{
+  text-align: center;
+}
+
+
+
+
 
 
 
@@ -161,9 +215,7 @@ margin-right: auto;
    .team-container{
     flex-direction: column-reverse;
    }
-   .cards-first{
-    
-   }
+   
    .btn-large{
     width:max-content;
     font-size: medium;
@@ -175,6 +227,11 @@ margin-right: auto;
    }
    .experience{
     font-size: 0.8rem;
+   }
+   .cards-second-picture{
+    flex-direction: column;
+    height:130vh;
+    justify-content: space-evenly;
    }
   
 
@@ -200,6 +257,13 @@ margin-right: auto;
         
         text-align: center;
        }
+       .cards-second-picture{
+        flex-direction: column;
+        height:130vh;
+        justify-content: space-evenly;
+        
+       }
+       
       
       
       
