--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ font-weight: 600;
 
 }
 .sponsors-picture img{
-  width:10vw;
+  width:12vw;
 }
 .sponsors-container{
   margin-top:10%;
@@ -187,6 +187,16 @@ font-weight: 600;
 }
 .sponsors-text{
   text-align: center;
+}
+footer{
+  border-radius: 8px;
+background-color: #FFF4E7;
+text-align: center;
+padding-top:2%;
+padding-bottom:2%;
+
+width:80vw;
+margin:10% auto 10% auto;
 }
 
 
